--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,3 +16,10 @@
     width: 100%;
     height: 100%;
 }
+
+h3 {
+    margin-bottom: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    color: Black
+}
