--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,15 @@
     height: 100%;
 }
 
+a {
+    color: #38b134
+    font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+a:hover {
+    color: #288825
+}
+
 h3 {
     margin-bottom: 8px;
     font-size: 18px;
