--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,9 +17,12 @@
     height: 100%;
 }
 
+p {
+    font-family: Georgia, Times, "Times New Roman", serif;   
+}
+
 a {
     color: #38b134;
-    font-family: Georgia, Times, "Times New Roman", serif;
 }
 
 a:hover {
