--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,10 @@ a:hover {
     color: #288825;
 }
 
+h1 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+}
+
 h3 {
     color: #6d6d6d
 }
