--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
     height: 100%;
 }
 
-div, body {
+body {
     font-family: Georgia, Times, "Times New Roman", serif;   
 }
 
@@ -29,7 +29,7 @@ a:hover {
     color: #288825;
 }
 
-h1 {
+header h1 {
     font-family: Georgia, Times, "Times New Roman", serif;
 }
 
