--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,10 @@ header h1 {
     font-family: Georgia, Times, "Times New Roman", serif;
 }
 
+h2 {
+    color: #6d6d6d;
+}
+
 h3 {
     color: #6d6d6d;
 }
