--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,17 +31,17 @@ a:hover {
 
 header h1 {
     font-family: Georgia, Times, "Times New Roman", serif;
-    float: clear;
+    clear: both;
 }
 
 h2 {
     color: #6d6d6d;
-    float: clear;
+    clear: both;
 }
 
 h3 {
     color: #6d6d6d;
-    float: clear;
+    clear: both;
 }
 
 img[src~="bordered"] {
