--- a/WebEngine/Examples/ScavengerHunt/index.css
+++ b/WebEngine/Examples/ScavengerHunt/index.css
@@ -1,7 +1,28 @@
-* {font-family:'Courier New', Courier, monospace;}
+* {font-family:"Macondo Swash Caps", cursive;
+  font-weight: 400;
+  font-style: normal;}
 			
-body { margin: 0; overflow: hidden; position: absolute; background-color:rgb(0, 93, 93); color: #ffffff;}
+body { margin: 0; overflow: hidden; position: absolute; background-color:#ffe5ba; color: #1F160D;}
+
+p {
+	color: #1f0d0d;
+	font-size: inherit;
+	padding: 10px 20px;
+}
+
+.pl {
+	padding-right: 35%;
+}
+
+.pr {
+	padding-left: 20%;
+	text-align: right;
+}
 			
+span {
+	font-size: 26px;
+}
+
 canvas {position: absolute; }
 			
 .guiContainer {position: relative;}
@@ -9,16 +30,19 @@ canvas {position: absolute; }
 .button {
 	font-size: inherit;
 	font-family: inherit;
-	background: linear-gradient(#d2d2d2, #939393, #666666);
-	color: #ffffff;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-	border: 2px solid black;
-	border-radius: 5px;
-	font-weight: bold;
-	box-shadow: inset 0 0.7em 0 rgba(255,255,255, .2);
+	color: #F7E4C7;
 	padding: 5px 20px;
 	transition: all 0.1s;
 	cursor: pointer;
+
+	background: #245C5C 0% 0% no-repeat padding-box;
+	border: 2px solid #E4B46B;
+	border-radius: 3px;
+	opacity: 1;
+}
+
+img {
+	mix-blend-mode: multiply;
 }
   
 .button:hover {
@@ -43,7 +67,7 @@ canvas {position: absolute; }
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	color: cyan;
+	color: inherit;
 }
 
 .checkboxContainer input {
@@ -52,47 +76,37 @@ canvas {position: absolute; }
 	cursor: pointer;
 	height: 0;
 	width: 0;
+	font-size: inherit;
   }
 
 .checkmark {
 	position: absolute;
-	top: 0.05em;
-	line-height: 0.7em;
-	width: 1.5em;
 	background-color: transparent;
-	border: 0.1em solid cyan;
+	border: 0.1em solid #245C5C;
 	border-radius: 10%;
-	box-shadow: inset 0 0 0 cyan;
+	box-shadow: inset 0 0 0 #245C5C;
 	transition: all 0.2s;
 	vertical-align: middle;
+	font-size: inherit;
+	margin-left: 20px;
+	padding-right: 10px;
 }
 
 .checkmark:before {
 	position: relative;
-	left: 0.1em;
-	content: "OFF";
-	font-size: 0.6em;
-	color: cyan;
-}
-
-.checkboxContainer:hover input ~ .checkmark {
-	background-color: rgba(255, 255, 255, 0.2);
-}
-
-.checkboxContainer:hover input:checked ~ .checkmark {
-	box-shadow: inset 1.6em 0 0 rgba(0, 255, 255, 0.8);
-}
-
-.checkboxContainer input:checked ~ .checkmark {
-	box-shadow: inset 1.6em 0 0 cyan;
+	content: "No";
+	color: #245C5C;
+	padding-left: 5px;
 }
 
 .checkboxContainer input:checked ~ .checkmark:before {
 	position: relative;
-    content: "ON";
-    color: black;
-    left: 1.2em;
-	font-size: 0.6em;
+    content: "Yes";
+    color: #ffe5ba;
+}
+
+.checkboxContainer input:checked ~ .checkmark {
+	box-shadow: inset 2.0em 0 0 #245C5C;
 }
 
 .slider {
